--- a/web_service/requirements.txt
+++ b/web_service/requirements.txt
@@ -1,15 +1,11 @@
 langchain
 langchain-groq
-langchain-anthropic
 langchain-core
 langchainhub
 langchain-community
 langchain-experimental
 langgraph
 python-dotenv
-nbformat
-beautifulsoup4
-duckduckgo-search
-chromadb
-tavily-python
-pandas
+
+Flask
+flask-cors
